--- a/hacknote (1).ipynb
+++ b/hacknote (1).ipynb
@@ -595,7 +595,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x=data[['employment','tax']]\n",
+    "x=data[['unemployment','tax']]\n",
     "y=data.iloc[:,-1]"
    ]
   },
